--- a/Dependent Variable Odd Generator v2.1
+++ b/Dependent Variable Odd Generator v2.1
@@ -22,18 +22,41 @@
 //SOFTWARE.
 
 
-
-study("Dependent Variable Odd Generator v2.0")
-
+study("Dependent Variable Odd Generator v2.1", shorttitle = "DVOG v2.1",overlay = false)
 src = close 
-method          = input(title="METHOD", options=["MFI", "RSI"], defval="MFI")
 
-// MONEY FLOW INDEX (MFI)
+adaptive = input(title="Market Type ", options=["MARKETS EXCLUDING USD/X", "FX USD/X",  "CRYPTOCURRENCIES"], defval="MARKETS EXCLUDING USD/X")
+method   = input(title="METHOD", options=["MFI", "RSI"], defval="MFI")
 
-// Money Flow Index Period
 
-length = input(5,minval = 2)
+length = input(5,minval = 4)
 
+// DEFINITION : INDEXES 
+
+// For Global Markets
+
+index = security('SP:SPX' , timeframe.period, close)
+
+// For Cryptocurrency
+
+crypto_index = security('CRYPTOINDEX:CIX100' , timeframe.period, close)
+
+// Switchable Index Selector : 
+
+float _index = na 
+
+
+if (adaptive=="MARKETS EXCLUDING USD/X")
+
+    _index:= index
+    
+if (adaptive=="FX USD/X")
+
+    _index:= -index 
+    
+if (adaptive=="CRYPTOCURRENCIES")
+
+    _index:= crypto_index
 
 // Essential Functions 
 
@@ -76,13 +99,13 @@ f_stdev(_src,_length) =>
     _output := sqrt(evar2)
 
 
-// Linear Regression Channels : 
+// Function Pearson Correlation
 
 f_pearson_corr(_src1, _src2, _length) =>
 
     _length_adjusted = _length < 2 ? 2 : _length
-    _ema1 = f_ema(_src1, _length_adjusted)
-    _ema2 = f_ema(_src2, _length_adjusted)
+    _ema1 = f_sma(_src1, _length_adjusted)
+    _ema2 = f_sma(_src2, _length_adjusted)
     isum = 0.0
     for i = 0 to _length_adjusted - 1
         isum := isum + (_src1[i] - _ema1) * (_src2[i] - _ema2)
@@ -94,6 +117,28 @@ f_pearson_corr(_src1, _src2, _length) =>
         isumsq2 := isumsq2 + pow(_src2[i] - _ema2, 2)
     pcc = isum/(sqrt(isumsq1*isumsq2))
     pcc
+
+
+// Function Multiple Index Pearson Correlation (3 - way)
+// dep = dependent (z) ,  indep = independent variables (x , y)
+
+f_multiple_corr(_dep1,_indep1,_indep2 , _length) =>
+    _length_adjusted = _length < 2 ? 2 : _length 
+    float _output = na 
+    
+    r_xz = f_pearson_corr(_indep1 , _dep1   , _length_adjusted)
+    r_yz = f_pearson_corr(_indep2 , _dep1   , _length_adjusted)
+    r_xy = f_pearson_corr(_indep1 , _indep2 , _length_adjusted)
+    
+    _output := sqrt((pow(r_xz , 2) + pow(r_yz , 2) - 2 * r_xz * r_yz * r_xy) / (1 - pow(r_xy , 2)))
+    
+
+f_adjusted_r_squared(_dep1,_indep1,_indep2,_length) =>
+    _length_adjusted = _length < 2 ? 2 : _length 
+    float _output = na
+    
+    r_squared = f_multiple_corr(_dep1,_indep1,_indep2,_length_adjusted)
+    _output := 1 - (((1 - pow(r_squared,2)) * (_length_adjusted - 1)) / (_length_adjusted - 3))
 
 
 
@@ -111,7 +156,7 @@ _market_index = rsi(upper_s, lower_s)
 // Dow Theory Cycles 
 
 
-dow_coeff = f_pearson_corr(src,volume,length)
+dow_coeff = f_adjusted_r_squared(src,volume,_index,length)
 
 dow_bull_factor = (1 + dow_coeff)
 dow_bear_factor = (1 - dow_coeff)
@@ -167,32 +212,27 @@ if (method=="RSI")
 _bull_gross  = (_method)
 _bear_gross  = (100 - _method )
 
-_price_stagnant = ((_bull_gross * _bear_gross ) / 100)
-_price_bull     =  (_bull_gross - _price_stagnant) 
-_price_bear     =  (_bear_gross - _price_stagnant) 
-
-
-_coeff_price = (_price_stagnant + _price_bull + _price_bear) / 100 
-
-
-_bull     = _price_bull / _coeff_price 
-_bear     = _price_bear / _coeff_price 
-_stagnant = _price_stagnant / _coeff_price
-
-
 
 // Market Types with Dow Factor
 
-_temp_bull_gross     =  _bull     * dow_bull_factor       
+_temp_bull_gross     =  _bull_gross * (1 + dow_bull_factor )      
 
-_temp_bear_gross     =  _bear     * dow_bear_factor 
+_temp_bear_gross     =  _bear_gross * (1 + dow_bear_factor) 
 
+
+_coeff_normal = (_temp_bull_gross + _temp_bear_gross) / 100
+
+
+// ********* OUR RSI / MFI VALUE ***********
+
+_bull_gross2  = _temp_bull_gross / _coeff_normal
+_bear_gross2  = _temp_bear_gross / _coeff_normal
 
 // Temporary Pure Odds 
 
-_temp_stagnant = ((_temp_bull_gross * _temp_bear_gross) / 100)
-_temp_bull     = _temp_bull_gross - _temp_stagnant 
-_temp_bear     = _temp_bear_gross - _temp_stagnant 
+_temp_stagnant = ((_bull_gross2 * _bear_gross2) / 100)
+_temp_bull     = _bull_gross2 - _temp_stagnant 
+_temp_bear     = _bear_gross2 - _temp_stagnant 
 
 
 // Now we ll do venn scheme (Probability Cluster)
@@ -202,14 +242,14 @@ _temp_bear     = _temp_bear_gross - _temp_stagnant
  
 _coeff = (_temp_stagnant + _temp_bull + _temp_bear) / 100
 
-_odd_bull     = _temp_bull / _coeff
-_odd_bear     = _temp_bear / _coeff
+_odd_bull     = _temp_bull     / _coeff
+_odd_bear     = _temp_bear     / _coeff
 _odd_stagnant = _temp_stagnant / _coeff
 
 
 // Plot data
 
-plot(_odd_bull     ,style = plot.style_histogram, color=color.green   ,linewidth=4, transp = 10)
-plot(_odd_bear     ,style = plot.style_histogram, color=color.red     ,linewidth=4, transp = 20)
-plot(_odd_stagnant ,style = plot.style_histogram, color=color.yellow  ,linewidth=4, transp = 30)
+plot(_odd_bull    ,style = plot.style_histogram, color=color.green   ,linewidth=4, transp = 10)
+plot(_odd_bear    ,style = plot.style_histogram, color=color.red     ,linewidth=4, transp = 20)
+plot(_odd_stagnant,style = plot.style_histogram, color=color.yellow  ,linewidth=4, transp = 30)
 
